style(算法框架): :recycle: 将实验代码拆分到模块/包, 重新组织项目结构

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "conventionalCommits.scopes": [
         "算法框架"
+    ],
+    "cSpell.words": [
+        "cmap",
+        "interp",
+        "interpolant",
+        "lanczos",
+        "perlin",
+        "tileable"
     ]
 }
