--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,13 @@
     ],
     "cSpell.words": [
         "cmap",
+        "cpsd",
         "interp",
         "interpolant",
         "lanczos",
         "perlin",
-        "tileable"
+        "rfft",
+        "tileable",
+        "xcorr"
     ]
 }
