--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,26 @@
 {
     "conventionalCommits.scopes": [
         "算法框架",
-        "算法细化"
+        "算法细化",
+        "界面"
     ],
     "cSpell.words": [
+        "angularaxis",
+        "Barpolar",
         "cmap",
         "cpsd",
+        "gridcolor",
         "interp",
         "interpolant",
         "lanczos",
         "perlin",
+        "plotly",
+        "radialaxis",
         "rfft",
+        "scaleanchor",
+        "scaleratio",
         "tileable",
+        "xaxes",
         "xcorr"
     ]
 }
