--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
+autopep8
+tqdm
+
 numpy
+numba
+scipy
+pandas
+matplotlib
+
 dash
+
+# CUDA 11.7
+# torch==2.0.1
+# torchvision==0.15.2
+# torchaudio==2.0.2
+
+# CPU
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+
+torchkeras
+torchmetrics
