refactor(算法框架): :recycle: 给实体换更贴切的类名，简化调用方式，加了两个输入类型约束

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,6 @@ dash
 # CPU
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
+accelerate
 torchkeras
 torchmetrics
