更新模型及训练参数

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "interp",
         "interpolant",
         "lanczos",
+        "maxlag",
         "perlin",
         "plotly",
         "radialaxis",
