--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "interpolant",
         "lanczos",
         "maxlag",
+        "nfft",
         "perlin",
         "plotly",
         "radialaxis",
