--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "scaleanchor",
         "scaleratio",
         "tileable",
+        "torchaudio",
         "torchkeras",
         "torchmetrics",
         "wandb",
