--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,18 @@ autopep8
 tqdm
 ipympl
 
+dash
+
 numpy
-numba
 scipy
 pandas
 matplotlib
 
-dash
+soundfile
 
-# CUDA 12.1
-# torch==2.1.2+cu121
-# torchvision==0.16.2+cu121
-# torchaudio==2.1.2+cu121
-# pip install torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu121
+-r torch-requirments.txt
 
 accelerate
 torchkeras
 torchmetrics
 wandb
-
-soundfile
