--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "perlin",
         "plotly",
         "radialaxis",
+        "resampler",
         "rfft",
         "scaleanchor",
         "scaleratio",
