--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "angularaxis",
         "autodl",
         "Barpolar",
+        "BBBBH",
         "cmap",
         "cpsd",
         "gridcolor",
@@ -17,6 +18,7 @@
         "interpolant",
         "kerascallbacks",
         "lanczos",
+        "levelname",
         "maxlag",
         "nfft",
         "perlin",
