feat(硬件): :sparkles: 添加采样平台接口, 以及识别程序detector框架

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "BBBBH",
         "cmap",
         "cpsd",
+        "downsampler",
         "gridcolor",
         "hyperband",
         "interp",
